--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,10 +33,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
-#      - name: Install Dependencies
-#        run: npm install 
-#      - name: Build website
-#        run: npm run build
+      - name: Install Dependencies
+        run: npm install 
+      - name: Build website
+        run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
